# zzhack

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  app.json  build.rs  build.sh  generate_metadata.js  index.html  input.css  links.toml  output.css  package.json  pnpm-lock.yaml  site.config.toml  start-dev.sh  styles.css  tailwind.config.js  terminal-emulator-172a1dc530302776.js  terminal-emulator-172a1dc530302776_bg.wasm  terminal-emulator-25babd57aa41a400.js  terminal-emulator-25babd57aa41a400_bg.wasm  terminal-emulator-291bd9e2940a2e33.js  terminal-emulator-291bd9e2940a2e33_bg.wasm  terminal-emulator-2c57cd7e5fd63009.js  terminal-emulator-2c57cd7e5fd63009_bg.wasm  terminal-emulator-2ce6374c27be1b59.js  terminal-emulator-2ce6374c27be1b59_bg.wasm  terminal-emulator-4205f35eb59f45fa_bg.wasm  terminal-emulator-4df209196b38816.js  terminal-emulator-4df209196b38816_bg.wasm  terminal-emulator-4f2a6da372dca7bb.js  terminal-emulator-4f2a6da372dca7bb_bg.wasm  terminal-emulator-531f0c45214edb61_bg.wasm  terminal-emulator-58f91c4d9b94f142.js  terminal-emulator-58f91c4d9b94f142_bg.wasm  terminal-emulator-63ddbb70a4db4323.js  terminal-emulator-63ddbb70a4db4323_bg.wasm  terminal-emulator-7ba4f4045d8e650b_bg.wasm  (+19 more)
.github/workflows/: deploy-site.yml  deploy.yml  fmt.yml
.stage/data/: green_theme_demo.md  metadata_demo.md
api/: Cargo.toml
api/src/: controllers.rs  dao.rs  database.rs  error.rs  lib.rs  routes.rs  services.rs  utils.rs
api/src/controllers/: dynamic.rs  get_posts.rs  links.rs  post.rs  tag.rs
api/src/controllers/post/: get_post_detail.rs  get_posts.rs
api/src/dao/: post.rs  post_tags.rs  tag.rs
api/src/database/: connection.rs  initialize.rs  map_posts_to_db.rs  models.rs
api/src/database/models/: mod.rs  post.rs  post_tag.rs  post_tags.rs  posts.rs  prelude.rs  tag.rs  tags.rs
api/src/routes/: dynamic_posts.rs  links.rs  post.rs  tag.rs
api/src/services/: dynamic_posts_service.rs  links_service.rs  post_service.rs  tag_service.rs
api/src/utils/: gray_matter.rs  helpers.rs  map_posts_to_db.rs  post.rs  vector_convert.rs
app/: Cargo.toml  README.md  Trunk.toml  index.html
app/assets/styles/: base.scss  markdown.scss
app/configs/: md_translate_rs.template  rs_iteration.template
app/src/: app.rs  components.rs  http.rs  icons.rs  lib.rs  main.rs  pages.rs  portal.rs  routes.rs  routes_switch.rs  utils.rs
app/src/components/: card.rs  load_more.rs  nav.rs  post_item.rs  tag.rs  theme_img.rs
app/src/components/card/: outline_card.rs
app/src/i18n/: translate.rs  zh.json
app/src/pages/: dynamic.rs  home.rs  links.rs  not_found.rs  post.rs  posts.rs
app/src/utils/: gray_matter.rs  inner_html.rs  markdown.rs  post_path.rs  site_config.rs  theme.rs
assets/styles/: base.scss  markdown.scss  one-dark.scss
configs/: rs_aggregation.template
data/: a.js  index.md
data/about/: demo.md  index.md
data/links/: resources.md
database/: Cargo.toml
database/src/: connection.rs  initialize.rs  lib.rs
drive/: Cargo.toml
entry/: Cargo.toml  README.md  index.html  zzhack.db
entry/styles/: input.css  output.css
global/: Cargo.toml
global/src/: lib.rs  theme_context.rs
home/: Cargo.toml
markdown/: Cargo.toml
markdown/src/: parse.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_tags.rs  m20240718_144412_create_posts.rs  m20240718_150817_create_posts_tags.rs
models/: Cargo.toml
models/src/: post.rs
not_found/: Cargo.toml
pages/about/: Cargo.toml
pages/home/: Cargo.toml
pages/links/: Cargo.toml
pages/not_found/: Cargo.toml
pages/post/: Cargo.toml
pages/post/src/: lib.rs
pages/projects/: Cargo.toml
posts/: add_links.md  asd.md  bar.md  build_blog.md  foo copy 4.md  foo.md  mlog_2022-10-26.md  test.md
posts/hello_world/: index.md
projects/: Cargo.toml
response/: Cargo.toml
response/src/: post.rs
router/: Cargo.toml
router/src/: lib.rs
services/: Cargo.toml
services/src/: lib.rs  post_service.rs  posts.rs
services/src/links_service/: links.json  links_service.rs  mod.rs
services/src/markdown_service/: elements.rs  markdown_service.rs  mod.rs  sources_config.rs
services/src/post_service/: mod.rs  post_card_size.rs  post_service.rs  posts_container.rs
services/src/projects_service/: mod.rs  projects.json  projects_service.rs
services/src/theme_service/: mod.rs  theme.rs  theme_service.rs
shared/: Cargo.toml
shared/src/: lib.rs  links.rs  post.rs  site_config.rs  tag.rs
site_config/: Cargo.toml
site_config/src/: lib.rs
src/: app.rs  filesystem_metadata.json  lib.rs  main.rs  posts.rs  routes.rs  store.rs
src/agents/: mod.rs  theme_agent.rs
src/commands/: cat.rs  cd.rs  clear.rs  echo.rs  email.rs  eval.rs  executor.rs  filesystem.rs  help.rs  history_push.rs  local_filesystem.rs  ls.rs  mod.rs  navigate.rs  pwd.rs  theme.rs  types.rs  view.rs  whoimi.rs
src/components/: ansi.rs  article_card.rs  avatar.rs  banner.rs  container.rs  footer.rs  history.rs  mod.rs  syntax.rs  terminal.rs
src/filesystem/: completion.rs  filesystem.rs  mod.rs  navigation.rs  operations.rs  types.rs
src/global/: theme_context.rs
src/hooks/: mod.rs  use_app_config.rs  use_auto_focus.rs  use_auto_navigation.rs  use_trailing_effect.rs
static/: index.html
styles/: base.scss
templates/: md_parser.template  md_parser_iteration.template
ui/: Cargo.toml
ui/src/: lib.rs  link_card.rs  project_card.rs
ui/src/common/: contact.rs  container.rs  footer.rs  footer_source.rs  gradient_title.rs  header.rs  image.rs  layout.rs  link.rs  mod.rs  switch.rs
ui/src/common/header/: drawer.rs  drawer_item.rs  header.rs  header_config.rs  mod.rs  pages.rs
ui/src/common/modal/: mod.rs  modal.rs  modal_action.rs  modal_content.rs  modal_title.rs
ui/src/post_card/: author.rs  label.rs  mod.rs  post_card.rs  post_card_header.rs  post_card_large.rs  post_card_small.rs
ui/src/theme/: mod.rs  theme_item.rs  theme_selector.rs
utils/: Cargo.toml
utils/src/: error.rs  html.rs  lib.rs  logger.rs  resource.rs  style.rs  theme.rs  time.rs
(+114 files in other folders)
