[package]
name = "zzhack"
version = "0.1.0"
authors = ["mistricky <mist@zzhack.fun>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
wasm-opt = false

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.67"
material-yew = { git = "https://github.com/hamza1311/material-yew", features = ["full"] }
yew-router = "0.15.0"
stdweb = "0.4.20"
css-in-rust = "0.5.0"
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
pulldown-cmark = "0.8.0"
once_cell = "1.8.0"
anyhow = "1.0.41"
serde = "1.0.126"
yewdux = "0.6.2"
regex = "1.5.4"
serde_json = "1.0.64"
chrono = "0.4.19"
base64 = "0.13.0"

[dependencies.syntect]
version = "4.5"
default-features = false
features = [
    "html",
    "dump-load",
    "regex-fancy"
]

[build-dependencies]
syntect = { version = "4.5", default-features = false, features = ["default-fancy"] }
