[package]
name = "terminal-emulator"
version = "0.1.0"
edition = "2021"
description = "A browser-based terminal emulator built with Rust and Yew"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
gloo = "0.11"
js-sys = "0.3"
pulldown-cmark = "0.9"
gloo-console = "0.3.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Window",
  "KeyboardEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
]

[build-dependencies]
toml = "0.8"

