[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
chrono = "0.4.38"
gray_matter = "0.2.8"
serde = "1.0.204"
database = {path = "../database"}
site_config = { path = "../site_config" }
models = { path = "../models" }
anyhow = "1.0.86"
response = { path = "../response" }
