[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
chrono = "0.4.38"
gray_matter = "0.2.8"
serde = "1.0.204"
site_config = { path = "../site_config" }
anyhow = "1.0.86"
shared = { path = "../shared" }
markdown = { path = "../markdown"}
tokio = "1.38.0"
toml = "0.8.14"
sea-orm = { version = "1.0.1", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
futures = "0.3.30"

