[package]
name = "zzhack"
version = "0.1.0"
authors = ["mistricky <mist@zzhack.fun>"]
edition = "2018"

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.80"
material-yew = { git = "https://github.com/hamza1311/material-yew", features = ["full"] }
stdweb = "0.4.20"
css-in-rust = "0.5.0"
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
pulldown-cmark = "0.8.0"
once_cell = "1.8.0"
anyhow = "1.0.41"
serde = "1.0.126"
regex = "1.5.4"
serde_json = "1.0.64"
chrono = "0.4.19"
yew-router = "0.16.0"
base64 = "0.13.0"
js-sys = "0.3.55"
lazy_static = "1.4.0"
stylist = {version = "0.10", features = ["yew_integration"]}
wasm-logger = "0.2.0"
log = "0.4.17"
wee_alloc = "0.4.5"
services = {path = "../services"}
global = {path = "../global"}
utils = {path = "../utils"}
ui = {path = "../ui"}
post = {path = "../pages/post"}
home = {path = "../pages/home"}
about = {path = "../pages/about"}
not_found = {path = "../pages/not_found"}
projects = {path = "../pages/projects"}
router = {path = "../router"}

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

