[package]
name = "app"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray_matter = "0.2.8"
js-sys = "0.3.69"
log = "0.4.22"
pulldown-cmark = "0.11.0"
serde = "1.0.204"
serde_json = "1.0.120"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = "0.21.0"
yew-interop = "0.3.0"
yew-router = "0.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
database = { path ="../database" }
