[package]
name = "app"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray_matter = "0.2.8"
js-sys = "0.3.69"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["hydration", "ssr"]}
yew-router = "0.18.0"
shared = {path = "../shared"}
reqwest = { version = "0.12.5", features = ["json"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-macro = "0.2.92"
site_config = { path = "../site_config" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
api = {path = "../api"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
