[package]
name = "entry"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "zzhack_hydrate_bundle"
required-features = ["hydration"]

[[bin]]
name = "zzhack_main"
required-features = ["ssr"]

[dependencies]
yew = { version = "0.21.0", features = ["hydration", "ssr"]}
log = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }
app = { path = "../app", features = ["ssr", "hydration"] }
site_config = { path = "../site_config" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6"
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
hyper = { version = "0.14", features = ["server", "http1"] }
api = { path = "../api"}

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
