[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
regex = "1.5.5"
serde = "1.0.137"
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
serde_json = "1.0.64"
once_cell = "1.10.0"

[dependencies.syntect]
version = "4.5"
default-features = false
features = [
    "html",
    "dump-load",
    "regex-fancy"
]

[build-dependencies]
syntect = { version = "4.5", default-features = false, features = ["default-fancy"] }
