[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
stylist = {version = "0.10", features = ["yew_integration"]}
utils = {path = "../utils"}
global = {path = "../global"}
services = {path = "../services"}
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
wasm-logger = "0.2.0"
log = "0.4.17"
material-yew = { git = "https://github.com/hamza1311/material-yew", features = ["full"] }
