[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
js-sys = "0.3.55"
global = {path = "../global"}
services = {path = "../services"}
yew = "0.19"
chrono = "0.4.19"
wasm-bindgen = "0.2.80"
