[package]
name = "post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = {version = "0.10", features = ["yew_integration"]}
ui = {path = "../../ui"}
services = {path = "../../services"}
utils = {path = "../../utils"}
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
gloo-timers = "0.2.4"
